--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-  <h1>Merge Conflicts</h1>
-      <p>Git Merge</p>
+  <h1>Merge Conflict Lessons</h1>
+      <p>Git Merge Practice</p>
   </body>
 </html>
