second git commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-  <h1>Merge Conflicts</h1>
-      <p>Git Merge</p>
+  <h1>Merge Conflicts version 2</h1>
+      <p>Git Merge version 2</p>
   </body>
 </html>
